force-app/main/default/objects/dupcheck__dc3Duplicate__c/dupcheck__dc3Duplicate__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Duplicate</label>
    <nameField>
        <displayFormat>DUP{0000000000}</displayFormat>
        <label>Plauti Deduplicate Duplicate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>