force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__AIDuplicateRecommendationExplanation__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__AIDuplicateRecommendationExplanation__c</fullName>
    <label>AI Duplicate Determination Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>