force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__AIDuplicateRecommendationStatus__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__AIDuplicateRecommendationStatus__c</fullName>
    <label>AI Duplicate Determination Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>