force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__Error__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>