force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__MatchObject__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__MatchObject__c</fullName>
    <externalId>true</externalId>
    <label>Match Object</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>