force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__ScenarioScore__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__ScenarioScore__c</fullName>
    <label>Scenario Scores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>