force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__SourceFilterValue__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__SourceFilterValue__c</fullName>
    <externalId>true</externalId>
    <label>Source Filter Value</label>
    <length>250</length>
    <type>Text</type>
</CustomField>