force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__SourceOwner__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__SourceOwner__c</fullName>
    <externalId>true</externalId>
    <label>Source Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>