force-app/main/default/objects/dupcheck__dc3Duplicate__c/fields/dupcheck__SourceRecordType__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__SourceRecordType__c</fullName>
    <externalId>true</externalId>
    <label>Source Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>